tests/ui/unreachable-code/unreachable-bool-read-7246.stderr
error: unreachable statement
  --> $DIR/unreachable-bool-read-7246.rs:7:5
   |
LL |     return;
   |     ------ any code following this expression is unreachable
LL |     if *ptr::null() {};
   |     ^^^^^^^^^^^^^^^^^^^ unreachable statement
   |
note: the lint level is defined here
  --> $DIR/unreachable-bool-read-7246.rs:1:9
   |
LL | #![deny(unreachable_code)]
   |         ^^^^^^^^^^^^^^^^

warning: dereferencing a null pointer
  --> $DIR/unreachable-bool-read-7246.rs:7:8
   |
LL |     if *ptr::null() {};
   |        ^^^^^^^^^^^^ this code causes undefined behavior when executed
   |
   = note: `#[warn(deref_nullptr)]` on by default

error: aborting due to 1 previous error; 1 warning emitted

